# QSTEM

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
GUI_Matlab/: DisplacementParams.fig  DisplacementParams.m  DisplayModelProperties.fig  DisplayModelProperties.m  ReadDM3_Matlab.m  aberrations.fig  aberrations.m  aberrations_TEM.fig  aberrations_TEM.m  advancedSettings.fig  advancedSettings.m  binread2D.m  binwrite2D.m  constructBlock_mex.mexw32  constructBlock_mex.mexw64  convert2cfg.m  convertDM3toIMG.m  convertdat2cfg.m  drawCFG.m  drawXtal.m  fel0.mat  fftw3.h  fftw3.lib  imageSim.fig  imageSim.m  qmb.fig  qmb.m  qstem.fig  qstem.m  qstem_InnoSetup.iss  readCFG.m  readCFG_mex.c  readCFG_mex.mexw32  readCFG_mex.mexw64  readCFG_mex_old.mexw32  readCFG_qstem.m  readConfigFile.m  readXYZ.m  rotateZoneAxis.m  scaleSTEMImage.fig  (+11 more)
GUI_Qt/: MicroscopeSettings.ui  OutputSettings.ui  aberrations.ui  detectors.ui  microscope.ui  model.ui  qstem.ui  slab_slice.ui  target_area.ui  uiFuncs.py  ui_tester.py
QSTEM_GUI_Traits/: aberrations.py
cmake/Modules/: Findfftw3.cmake  c_flag_overrides.cmake  cxx_flag_overrides.cmake
fftw-3.2.2-dll32/: README-WINDOWS  libfftw3-3.exp  libfftw3-3.lib  libfftw3f-3.exp  libfftw3f-3.lib  libfftw3l-3.exp  libfftw3l-3.lib
fftw-3.2.2-dll64/: README-WINDOWS  libfftw3-3.def  libfftw3-3.exp  libfftw3-3.lib  libfftw3f-3.exp  libfftw3f-3.lib  libfftw3l-3.def  libfftw3l-3.exp  libfftw3l-3.lib
gbmaker/: CMakeLists.txt  gbmaker.cpp
libs/: CMakeLists.txt  comparators.h  config_readers.cpp  config_readers.hpp  crystal.cpp  crystal.hpp  data_containers.cpp  data_containers.cpp_  data_containers.h  data_containers.hpp  data_containers.hpp_  defines.h  detectors.cpp  detectors.hpp  elTable.hpp  experiments.cpp  experiments.hpp  fftw_allocator.hpp  fileio_fftw3.cpp  fileio_fftw3.h  fileio_fftw3.hpp  filename_utilities.hpp  floatdef.h  imagelib_fftw3.cpp  imagelib_fftw3.cpp.orig  imagelib_fftw3.h  imagelib_fftw3.hpp  matrixlib.cpp  matrixlib.h  matrixlib.hpp  memory.cpp  memory_fftw3.cpp  memory_fftw3.h  memory_fftw3.hpp  potential.cpp  potential.hpp  qh5.cpp  qh5.hpp  random.hpp  readparams.cpp  (+9 more)
libs/Release/: qstem.exp
libs/config_IO/: CMakeLists.txt  config_reader_factory.cpp  config_reader_factory.hpp  read_cfg.cpp  read_cfg.hpp  read_interface.hpp  read_qsc.cpp  read_qsc.hpp
libs/data_IO/: CMakeLists.txt  binary_output.cpp  binary_output.hpp  data_io_factories.cpp  data_io_factories.hpp  data_writers.cpp  img_VERSION.hpp  img_input.cpp  img_input.hpp  img_output.cpp  img_output.hpp  input_interface.hpp  output_interface.hpp  qh5_input.cpp  qh5_input.cpp_  qh5_input.hpp  qh5_output.cpp  qh5_output.hpp
libs/experiments/: CMakeLists.txt  base.cpp  base.hpp  cbed.cpp  cbed.hpp  experiment_interface.hpp  stem.cpp  stem.hpp  tem.cpp  tem.hpp  tomo.cpp  tomo.hpp
libs/file_IO/: CMakeLists.txt  binary_output.cpp  binary_output.hpp  data_writers.hpp  img_output.cpp  img_output.hpp  output_interface.hpp
libs/potentials/: CMakeLists.txt  README.txt  pot_2d.cpp  pot_2d.hpp  pot_2d_fft.cpp  pot_2d_fft.hpp  pot_3d.cpp  pot_3d.hpp  pot_3d_fft.cpp  pot_3d_fft.hpp  pot_base.cpp  pot_base.hpp  pot_factory.cpp  pot_factory.hpp  pot_interface.hpp  scatfactsRez.hpp
libs/structure_IO/: CMakeLists.txt  cfg.cpp  cfg.hpp  cssr.cpp  cssr.hpp_  dat.cpp  dat.cpp_  dat.hpp  dat.hpp_  pdb.cpp  pdb.hpp_  structureInterface.hpp  structure_factories.cpp  structure_factories.hpp
libs/tests/: test_containers.cpp  test_detectors.cpp  test_wavefunctions.cpp
libs/wavefunctions/: CMakeLists.txt  wave_base.cpp  wave_base.hpp  wave_convergent.cpp  wave_convergent.hpp  wave_factory.cpp  wave_factory.hpp  wave_interface.hpp  wave_plane.cpp  wave_plane.hpp
pthreads_w32/: README.txt
python/: QSTEM_UI.py  QSTEM_simDemo.ipynb  SF_rez.txt  cfg_reading_regexes.txt  model.py  plot_img.py  potential.py  probe.py  readCfg.py  read_img.py  uiToPy.bat  ui_tester.py
python/dialogs/: main_window.py
python/dialogs/uic/: README.txt
python/fileio/: cfg_reading_regexes.txt  readCfg.py  read_img.py
python/models/: sample_chaco.py
python/models/raw_models/: probe.py  readme.txt  sample.py
qscRg12/: CMakeLists.txt  qscRg12.c  qscRg12Readme.txt  qsc_AutoScriptMS
stem3/: CMakeLists.txt  customslice.cpp  customslice.cpp_  customslice.h  customslice.hpp  customslice.hpp_  potentials.cpp  potentials.h  scatfactsRez.h  stem3.cpp  stem3.hpp_  stemlib.cpp  stemlib.cpp_  stemlib.h  stemlib.hpp  stemlib.hpp_  stemutil.cpp  stemutil.cpp_  stemutil.h  stemutil.hpp
stem3/debug_data/: TlNbO.cfg  img_view.py  stem_STO_4x4.qsc  stem_TlNbO.qsc
tests/: CMakeLists.txt  boost_collection_close.hpp
tests/data/: CBED_SrTiO3.qsc  SrTiO3.cfg  SrTiO3.cif  detector1_2.img  diffAvg_0_16.img  mulswav_16_2.img  mulswav_16_2rewrite.img  stem_STO_4x4.qsc  tem_STO.qsc
tests/libs/: CMakeLists.txt  test_config_readers.cpp  test_crystal.cpp  test_detectors.cpp
tests/libs/Release/: test_wavefunctions.exp
tests/libs/config_IO/: CMakeLists.txt  test_config_qsc.cpp  test_qsc.cpp
tests/libs/data_IO/: CMakeLists.txt  test_data_img.cpp
tests/libs/experiments/: CMakeLists.txt  test_expt_stem.cpp
tests/libs/potentials/: CMakeLists.txt  test_pot_2d.cpp  test_pot_3d_fft.cpp
tests/libs/structure_IO/: CMakeLists.txt  test_structure_cfg.cpp
tests/libs/wavefunctions/: CMakeLists.txt  test_wave_base.cpp  test_wave_convergent.cpp  test_wave_plane.cpp  test_wavefunctions.cpp
